infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector: # look for pods with the label of "app: client"
    matchLabels:
      app: client
  template:
    metadata:
      labels: 
        app: client
    spec:
      containers:
        - name: client
          image: nmoon778/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec: # type: ClusterIP by default
  selector: # selects the pods that will be allowed access to
    app: client
  ports: 
    - name: client
      protocol: TCP
      port: 3000 # port of the Kubernetes node
      targetPort: 3000 # port of the pod
