infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector: # look for pods with the label of "app: comments"
    matchLabels:
      app: comments
  template:
    metadata:
      labels: 
        app: comments
    spec:
      containers:
        - name: comments
          image: nmoon778/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec: # type: ClusterIP by default
  selector: # selects the pods that will be allowed access to
    app: comments
  ports: 
    - name: comments
      protocol: TCP
      port: 4001 # port of the Kubernetes node
      targetPort: 4001 # port of the pod
