infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector: # selects the pods that will be allowed access to
    app: posts
  ports: 
    - name: posts
      protocol: TCP
      port: 4000 # port of the Kubernetes node
      targetPort: 4000 # port of the pod
