infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector: # look for pods with the label of "app: query"
    matchLabels:
      app: query
  template:
    metadata:
      labels: 
        app: query
    spec:
      containers:
        - name: query
          image: nmoon778/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec: # type: ClusterIP by default
  selector: # selects the pods that will be allowed access to
    app: query
  ports: 
    - name: query
      protocol: TCP
      port: 4002 # port of the Kubernetes node
      targetPort: 4002 # port of the pod
